--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "fastclick": "^1.0.6",
     "flickity": "^1.1.1",
-    "grunt-webpack": "^1.0.11"
+    "grunt-webpack": "^1.0.11",
+    "web-midi-api": "^1.4.4"
   },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
